[package]
name = "reddit-wasm-search"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.64"
wasm-bindgen-futures = "0.4.14"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.39"
reqwest = { version = "0.10", features = ["json"] }
handlebars = "3.0.1"
gloo = "0.2.1"

[dependencies.web-sys]
version = "0.3.42"
features = [
  'console',
  'Document',
  'Element',
  'HtmlButtonElement',
  'HtmlElement',
  'HtmlInputElement',
  'Node',
  'Window'
]
